[package]
name = "rdirscan"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"
url = "2.5"
